Refactor GPT document and provider management
Reworks document conversion and chunk handling to remove chunk-based logic, consolidates document management methods, and updates references from 'Sourcemanager' to 'SourceManager'. Refactors provider configuration and options handling, updates summarizer and text2text interfaces to use IntConsumer for token usage, and improves Google AI token counting for Gemini models. Removes deprecated code and cleans up comments and documentation URLs.